<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <item
        android:id="@+id/nav_menu_navigation"
        android:title="@string/drawer_menu_group_navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_menu_main"
                    android:title="@string/navigation_main"/>
                <item
                    android:id="@+id/nav_menu_player"
                    android:title="@string/navigation_player"
                    android:enabled="false"/>
                <item
                    android:id="@+id/nav_menu_music"
                    android:title="@string/navigation_music"/>
                <item
                    android:id="@+id/nav_menu_playlists"
                    android:title="@string/navigation_playlists"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_menu_application"
        android:title="@string/drawer_menu_group_application">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_menu_preferences"
                    android:title="@string/application_preferences" android:enabled="false"/>
                <item
                    android:id="@+id/nav_menu_exit"
                    android:title="@string/application_exit"/>
            </group>
        </menu>
    </item>

</menu>