<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/komb_3"
        android:layout_marginEnd="90dp"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    
    <EditText
        android:id="@+id/login_login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:layout_margin="10dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/login_pass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_sign_in_btn"
        android:textColor="@color/colorText"
        android:background="@color/colorBackLight"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_registration_proposal"
        android:gravity="center"
        android:layout_marginTop="35dp"/>

    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_registration_btn"
        android:textColor="@color/colorText"
        android:background="@color/colorBackLight"/>

</LinearLayout>