<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_logo"
        android:src="@mipmap/komb_1"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/startup_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_message"
        android:textSize="18sp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/startup_reconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_connect_again"
        android:textSize="12sp"
        android:visibility="visible"/>

</LinearLayout>