<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/song_item_cover"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/song_recycler_cover"
        android:src="@mipmap/default_song_cover"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="70dp"
        android:gravity="center_vertical">

        <View
            android:id="@+id/song_item_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical|start"
            android:orientation="vertical"
            android:layout_toStartOf="@id/song_item_center">

            <TextView
                android:id="@+id/recycler_song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/song_title_placeholder" />

            <TextView
                android:id="@+id/recycler_song_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/song_artist_placeholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical|end"
            android:layout_toEndOf="@id/song_item_center">

            <TextView
                android:id="@+id/recycler_song_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_time_placeholder"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="end"/>

            <TextView
                android:id="@+id/recycler_song_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_album_placeholder"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="start"/>

        </LinearLayout>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBackLight"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="30dp"/>

</RelativeLayout>